Fix file tree scroll bar button overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,7 @@
 #fileDrop>div { border:2px dashed white; border-radius:25px; width:500px; margin-left:-250px; height:180px; margin-top:-100px; position:fixed; top:50%; left:50%; color:white; text-align:center; font-size:22px; padding-top:65px }
 #fileTree { font-family:Arial; font-size:12px }
 body { line-height:normal }
-#fileTree { position:absolute; top:0; bottom:28px; width:100%; height:100%; overflow: auto; }
+#fileTree { position:absolute; top:0; bottom:28px; width:100%; /*height:100%;*/ overflow: auto; }
 #fileTree .jstree-node { margin-left: 14px }
 #fileTree .jstree-container-ul>.jstree-node { margin-left:0 }
 #fileTree .jstree-clicked { background:initial }
